# magpie_control

./: .gitignore  README.md  package.xml  pyproject.toml  requirements.txt  setup.py
launch/: gripper_control.launch.py
magpie/: README.md
resource/: magpie_control
src/magpie/: realsense_wrapper.py  ur5.py
src/magpie_control/: BT.py  arm_utils.py  ax12.py  eflesh.py  ft_sensor.py  ft_sensor_node.py  grasp.py  gripper.py  gripper_node.py  homog_utils.py  poses.py  realsense_device_manager.py  realsense_wrapper.py  tactile_sensor_node.py  ur5.py  utils.py
tests/: move_ur5.ipynb  test_eflesh.ipynb
