[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magpie_control"
version = "2024.9"
authors = [
  { name="Stefan Caldararu", email="stefan.caldararu@colorado.edu" },
]
description = "magpie_control"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'dynamixel_sdk',
  'numpy',
  'py_trees',
  'spatialmath_python',
  'splines',
  'open3d',
  'pyrealsense2',
  'Pillow',
  'open3d',
  'scipy',
  'ur_rtde',
  'pyserial',
  'psutil',
]

[project.urls]
Homepage = "https://github.com/correlllab/magpie_control"
Issues = "https://github.com/correlllab/magpie_control/issues"